--- a/02_reproducible_model_workflow/lesson-1-machine-learning-pipelines/exercises/exercise_3/solution/process_data/conda.yml
+++ b/02_reproducible_model_workflow/lesson-1-machine-learning-pipelines/exercises/exercise_3/solution/process_data/conda.yml
@@ -3,12 +3,16 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - requests=2.24.0
-  - pip=20.3.3
+  - requests=2.31.0
+  - pip=23.3.1
+  - mlflow=2.8.1
+  - hydra-core=1.3.2
+
   - seaborn=0.11.1
   - pandas=1.2.3
   - scikit-learn=0.24.1
-  - matplotlib==3.2.2
-  - pillow=8.1.2
+  - matplotlib==3.8.4
+  - pillow=10.3.0
+
   - pip:
-      - wandb==0.10.21
+      - wandb==0.16.0
