--- a/02_reproducible_model_workflow/lesson-1-machine-learning-pipelines/exercises/exercise_3/starter/conda.yml
+++ b/02_reproducible_model_workflow/lesson-1-machine-learning-pipelines/exercises/exercise_3/starter/conda.yml
@@ -3,4 +3,9 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  # Complete HERE
+  - requests=2.31.0
+  - pip=23.3.1
+  - mlflow=2.8.1
+  - hydra-core=1.3.2
+  - pip:
+    - wandb==0.16.0
