--- a/02_reproducible_model_workflow/lesson-2-data-exploration-and-preparation/exercises/exercise_5/starter/conda.yml
+++ b/02_reproducible_model_workflow/lesson-2-data-exploration-and-preparation/exercises/exercise_5/starter/conda.yml
@@ -1,13 +1,11 @@
-name: download_data
+name: preprocess_data
 channels:
   - conda-forge
   - defaults
 dependencies:
   - pandas=1.2.3
   - pip=20.3.3
-  - scikit-learn=0.24.1
-  - matplotlib>=3.2.2
-  - plotly==4.4.1
-  - pillow=8.1.2
+  - pyarrow=2.0
+  - numpy<=1.24
   - pip:
       - wandb==0.10.21
